y.output
Terminals unused in grammar

   TRUE
   FALSE
   ASSIGN


Grammar

    0 $accept: program $end

    1 program: statement

    2 statement: while_stmt

    3 while_stmt: WHILE expression COLON

    4 expression: or_test

    5 or_test: and_test
    6        | and_test OR or_test

    7 and_test: not_test
    8         | not_test AND and_test

    9 not_test: comparison
   10         | NOT not_test

   11 comparison: arith_expr
   12           | arith_expr EQ arith_expr
   13           | arith_expr NEQ arith_expr
   14           | arith_expr GTE arith_expr
   15           | arith_expr GT arith_expr
   16           | arith_expr LTE arith_expr
   17           | arith_expr LT arith_expr

   18 arith_expr: term
   19           | arith_expr PLUS term
   20           | arith_expr MINUS term

   21 term: factor
   22     | term MUL factor
   23     | term DIV factor
   24     | term MOD factor

   25 factor: ID
   26       | NUMBER
   27       | LBRACKET expression RBRACKET
   28       | UMINUS factor
   29       | keyword

   30 keyword: PRINT
   31        | RARE


Terminals, with rules where they appear

$end (0) 0
error (256)
PRINT (258) 30
RARE (259) 31
WHILE (260) 3
TRUE (261)
FALSE (262)
NOT (263) 10
AND (264) 8
OR (265) 6
NUMBER (266) 26
PLUS (267) 19
UMINUS (268) 28
MINUS (269) 20
MUL (270) 22
DIV (271) 23
MOD (272) 24
EQ (273) 12
NEQ (274) 13
GT (275) 15
GTE (276) 14
LT (277) 17
LTE (278) 16
LBRACKET (279) 27
RBRACKET (280) 27
COLON (281) 3
ASSIGN (282)
ID (283) 25


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
program (30)
    on left: 1, on right: 0
statement (31)
    on left: 2, on right: 1
while_stmt (32)
    on left: 3, on right: 2
expression (33)
    on left: 4, on right: 3 27
or_test (34)
    on left: 5 6, on right: 4 6
and_test (35)
    on left: 7 8, on right: 5 6 8
not_test (36)
    on left: 9 10, on right: 7 8 10
comparison (37)
    on left: 11 12 13 14 15 16 17, on right: 9
arith_expr (38)
    on left: 18 19 20, on right: 11 12 13 14 15 16 17 19 20
term (39)
    on left: 21 22 23 24, on right: 18 19 20 22 23 24
factor (40)
    on left: 25 26 27 28 29, on right: 21 22 23 24 28
keyword (41)
    on left: 30 31, on right: 29


state 0

    0 $accept: . program $end
    1 program: . statement
    2 statement: . while_stmt
    3 while_stmt: . WHILE expression COLON

    WHILE  shift, and go to state 1

    program     go to state 2
    statement   go to state 3
    while_stmt  go to state 4


state 1

    3 while_stmt: WHILE . expression COLON
    4 expression: . or_test
    5 or_test: . and_test
    6        | . and_test OR or_test
    7 and_test: . not_test
    8         | . not_test AND and_test
    9 not_test: . comparison
   10         | . NOT not_test
   11 comparison: . arith_expr
   12           | . arith_expr EQ arith_expr
   13           | . arith_expr NEQ arith_expr
   14           | . arith_expr GTE arith_expr
   15           | . arith_expr GT arith_expr
   16           | . arith_expr LTE arith_expr
   17           | . arith_expr LT arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NOT       shift, and go to state 7
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    expression  go to state 12
    or_test     go to state 13
    and_test    go to state 14
    not_test    go to state 15
    comparison  go to state 16
    arith_expr  go to state 17
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 2

    0 $accept: program . $end

    $end  shift, and go to state 21


state 3

    1 program: statement .

    $default  reduce using rule 1 (program)


state 4

    2 statement: while_stmt .

    $default  reduce using rule 2 (statement)


state 5

   30 keyword: PRINT .

    $default  reduce using rule 30 (keyword)


state 6

   31 keyword: RARE .

    $default  reduce using rule 31 (keyword)


state 7

    9 not_test: . comparison
   10         | . NOT not_test
   10         | NOT . not_test
   11 comparison: . arith_expr
   12           | . arith_expr EQ arith_expr
   13           | . arith_expr NEQ arith_expr
   14           | . arith_expr GTE arith_expr
   15           | . arith_expr GT arith_expr
   16           | . arith_expr LTE arith_expr
   17           | . arith_expr LT arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NOT       shift, and go to state 7
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    not_test    go to state 22
    comparison  go to state 16
    arith_expr  go to state 17
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 8

   26 factor: NUMBER .

    $default  reduce using rule 26 (factor)


state 9

   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   28       | UMINUS . factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    factor   go to state 23
    keyword  go to state 20


state 10

    4 expression: . or_test
    5 or_test: . and_test
    6        | . and_test OR or_test
    7 and_test: . not_test
    8         | . not_test AND and_test
    9 not_test: . comparison
   10         | . NOT not_test
   11 comparison: . arith_expr
   12           | . arith_expr EQ arith_expr
   13           | . arith_expr NEQ arith_expr
   14           | . arith_expr GTE arith_expr
   15           | . arith_expr GT arith_expr
   16           | . arith_expr LTE arith_expr
   17           | . arith_expr LT arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   27       | LBRACKET . expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NOT       shift, and go to state 7
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    expression  go to state 24
    or_test     go to state 13
    and_test    go to state 14
    not_test    go to state 15
    comparison  go to state 16
    arith_expr  go to state 17
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 11

   25 factor: ID .

    $default  reduce using rule 25 (factor)


state 12

    3 while_stmt: WHILE expression . COLON

    COLON  shift, and go to state 25


state 13

    4 expression: or_test .

    $default  reduce using rule 4 (expression)


state 14

    5 or_test: and_test .  [RBRACKET, COLON]
    6        | and_test . OR or_test

    OR  shift, and go to state 26

    $default  reduce using rule 5 (or_test)


state 15

    7 and_test: not_test .  [OR, RBRACKET, COLON]
    8         | not_test . AND and_test

    AND  shift, and go to state 27

    $default  reduce using rule 7 (and_test)


state 16

    9 not_test: comparison .

    $default  reduce using rule 9 (not_test)


state 17

   11 comparison: arith_expr .  [AND, OR, RBRACKET, COLON]
   12           | arith_expr . EQ arith_expr
   13           | arith_expr . NEQ arith_expr
   14           | arith_expr . GTE arith_expr
   15           | arith_expr . GT arith_expr
   16           | arith_expr . LTE arith_expr
   17           | arith_expr . LT arith_expr
   19 arith_expr: arith_expr . PLUS term
   20           | arith_expr . MINUS term

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    EQ     shift, and go to state 30
    NEQ    shift, and go to state 31
    GT     shift, and go to state 32
    GTE    shift, and go to state 33
    LT     shift, and go to state 34
    LTE    shift, and go to state 35

    $default  reduce using rule 11 (comparison)


state 18

   18 arith_expr: term .  [AND, OR, PLUS, MINUS, EQ, NEQ, GT, GTE, LT, LTE, RBRACKET, COLON]
   22 term: term . MUL factor
   23     | term . DIV factor
   24     | term . MOD factor

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37
    MOD  shift, and go to state 38

    $default  reduce using rule 18 (arith_expr)


state 19

   21 term: factor .

    $default  reduce using rule 21 (term)


state 20

   29 factor: keyword .

    $default  reduce using rule 29 (factor)


state 21

    0 $accept: program $end .

    $default  accept


state 22

   10 not_test: NOT not_test .

    $default  reduce using rule 10 (not_test)


state 23

   28 factor: UMINUS factor .

    $default  reduce using rule 28 (factor)


state 24

   27 factor: LBRACKET expression . RBRACKET

    RBRACKET  shift, and go to state 39


state 25

    3 while_stmt: WHILE expression COLON .

    $default  reduce using rule 3 (while_stmt)


state 26

    5 or_test: . and_test
    6        | . and_test OR or_test
    6        | and_test OR . or_test
    7 and_test: . not_test
    8         | . not_test AND and_test
    9 not_test: . comparison
   10         | . NOT not_test
   11 comparison: . arith_expr
   12           | . arith_expr EQ arith_expr
   13           | . arith_expr NEQ arith_expr
   14           | . arith_expr GTE arith_expr
   15           | . arith_expr GT arith_expr
   16           | . arith_expr LTE arith_expr
   17           | . arith_expr LT arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NOT       shift, and go to state 7
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    or_test     go to state 40
    and_test    go to state 14
    not_test    go to state 15
    comparison  go to state 16
    arith_expr  go to state 17
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 27

    7 and_test: . not_test
    8         | . not_test AND and_test
    8         | not_test AND . and_test
    9 not_test: . comparison
   10         | . NOT not_test
   11 comparison: . arith_expr
   12           | . arith_expr EQ arith_expr
   13           | . arith_expr NEQ arith_expr
   14           | . arith_expr GTE arith_expr
   15           | . arith_expr GT arith_expr
   16           | . arith_expr LTE arith_expr
   17           | . arith_expr LT arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NOT       shift, and go to state 7
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    and_test    go to state 41
    not_test    go to state 15
    comparison  go to state 16
    arith_expr  go to state 17
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 28

   19 arith_expr: arith_expr PLUS . term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    term     go to state 42
    factor   go to state 19
    keyword  go to state 20


state 29

   20 arith_expr: arith_expr MINUS . term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    term     go to state 43
    factor   go to state 19
    keyword  go to state 20


state 30

   12 comparison: arith_expr EQ . arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    arith_expr  go to state 44
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 31

   13 comparison: arith_expr NEQ . arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    arith_expr  go to state 45
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 32

   15 comparison: arith_expr GT . arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    arith_expr  go to state 46
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 33

   14 comparison: arith_expr GTE . arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    arith_expr  go to state 47
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 34

   17 comparison: arith_expr LT . arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    arith_expr  go to state 48
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 35

   16 comparison: arith_expr LTE . arith_expr
   18 arith_expr: . term
   19           | . arith_expr PLUS term
   20           | . arith_expr MINUS term
   21 term: . factor
   22     | . term MUL factor
   23     | . term DIV factor
   24     | . term MOD factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    arith_expr  go to state 49
    term        go to state 18
    factor      go to state 19
    keyword     go to state 20


state 36

   22 term: term MUL . factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    factor   go to state 50
    keyword  go to state 20


state 37

   23 term: term DIV . factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    factor   go to state 51
    keyword  go to state 20


state 38

   24 term: term MOD . factor
   25 factor: . ID
   26       | . NUMBER
   27       | . LBRACKET expression RBRACKET
   28       | . UMINUS factor
   29       | . keyword
   30 keyword: . PRINT
   31        | . RARE

    PRINT     shift, and go to state 5
    RARE      shift, and go to state 6
    NUMBER    shift, and go to state 8
    UMINUS    shift, and go to state 9
    LBRACKET  shift, and go to state 10
    ID        shift, and go to state 11

    factor   go to state 52
    keyword  go to state 20


state 39

   27 factor: LBRACKET expression RBRACKET .

    $default  reduce using rule 27 (factor)


state 40

    6 or_test: and_test OR or_test .

    $default  reduce using rule 6 (or_test)


state 41

    8 and_test: not_test AND and_test .

    $default  reduce using rule 8 (and_test)


state 42

   19 arith_expr: arith_expr PLUS term .  [AND, OR, PLUS, MINUS, EQ, NEQ, GT, GTE, LT, LTE, RBRACKET, COLON]
   22 term: term . MUL factor
   23     | term . DIV factor
   24     | term . MOD factor

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37
    MOD  shift, and go to state 38

    $default  reduce using rule 19 (arith_expr)


state 43

   20 arith_expr: arith_expr MINUS term .  [AND, OR, PLUS, MINUS, EQ, NEQ, GT, GTE, LT, LTE, RBRACKET, COLON]
   22 term: term . MUL factor
   23     | term . DIV factor
   24     | term . MOD factor

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37
    MOD  shift, and go to state 38

    $default  reduce using rule 20 (arith_expr)


state 44

   12 comparison: arith_expr EQ arith_expr .  [AND, OR, RBRACKET, COLON]
   19 arith_expr: arith_expr . PLUS term
   20           | arith_expr . MINUS term

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29

    $default  reduce using rule 12 (comparison)


state 45

   13 comparison: arith_expr NEQ arith_expr .  [AND, OR, RBRACKET, COLON]
   19 arith_expr: arith_expr . PLUS term
   20           | arith_expr . MINUS term

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29

    $default  reduce using rule 13 (comparison)


state 46

   15 comparison: arith_expr GT arith_expr .  [AND, OR, RBRACKET, COLON]
   19 arith_expr: arith_expr . PLUS term
   20           | arith_expr . MINUS term

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29

    $default  reduce using rule 15 (comparison)


state 47

   14 comparison: arith_expr GTE arith_expr .  [AND, OR, RBRACKET, COLON]
   19 arith_expr: arith_expr . PLUS term
   20           | arith_expr . MINUS term

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29

    $default  reduce using rule 14 (comparison)


state 48

   17 comparison: arith_expr LT arith_expr .  [AND, OR, RBRACKET, COLON]
   19 arith_expr: arith_expr . PLUS term
   20           | arith_expr . MINUS term

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29

    $default  reduce using rule 17 (comparison)


state 49

   16 comparison: arith_expr LTE arith_expr .  [AND, OR, RBRACKET, COLON]
   19 arith_expr: arith_expr . PLUS term
   20           | arith_expr . MINUS term

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29

    $default  reduce using rule 16 (comparison)


state 50

   22 term: term MUL factor .

    $default  reduce using rule 22 (term)


state 51

   23 term: term DIV factor .

    $default  reduce using rule 23 (term)


state 52

   24 term: term MOD factor .

    $default  reduce using rule 24 (term)
